--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "extra": {
     "virion": {
       "spec": "3.0",
-      "namespace": "CortexPE\\DiscordWebhookAPI"
+      "namespace-root": "CortexPE\\DiscordWebhookAPI"
     }
   }
 }
